--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
                 <p style="text-align: center;">Productos top</p>
             </header>
             <main>
+                <div>
+                    <h4>Temas</h4>
+                    <ul>
+                        <li>
+                            <a href="./formulario.html">formularios</a>
+                        </li>
+                        <li>
+                            <a href="./tablas.html">Tablas</a>
+                        </li>
+                    </ul>
+                </div>
     
                 <table>
                     <tr>
